added answer check functionality and hint functionality

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 
     <button id="submit">Enter</button>
     <button id="hint">Get a hint</button>
+    <div id="hint-section">
+        <ol>
+            <li id="hint-0">test</li>
+            <li id="hint-1">test</li>
+            <li id="hint-2">test</li>    
+        </ol>
+    </div>
     <script type="text/javascript" src="main.js"></script>
 </body>
 <footer>
